<resources>
    <string name="app_name">MultimediaChallenge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="captureFiles">Captura de archivos</string>
    <string name="visualizationFiles">Visualización de archivos</string>
    <string name="editionFiles">Edición de archivos</string>
    <string name="others">Otros</string>
    <string name="captureText">Capturar texto</string>
    <string name="captureSound">Capturar Sonido</string>
    <string name="captureImg">Capturar imagen</string>
    <string name="captureVideo">Capturar vídeo</string>
    <string name="visualizationText">Leer texto</string>
    <string name="visualizationSound">Reproducir sonido</string>
    <string name="visualizationImg">Ver imagen</string>
    <string name="visualizationVideo">Reproducir vídeo</string>
    <string name="editionText">Editar texto</string>
    <string name="editionSound">Editar audio</string>
    <string name="editionImg">Editar imagen</string>
    <string name="editionVideo">Editar vídeo</string>
    <string name="italic">Cursiva</string>
    <string name="title">Título</string>
    <string name="body">Cuerpo</string>
    <string name="save">Guardar</string>
    <string name="bold">Negrita</string>
    <string name="fontSize">Tamaño de la fuente</string>
    <string name="findImgAtGallery">Buscar imagen en la galería</string>
    <string name="findText">Buscar texto</string>
    <string name="findVideoAtGallery">Buscar vídeo en la galería</string>
    <string name="saveAudio">Guardar audio</string>
    <string name="findAudio">Buscar archivo de audio</string>
</resources>